Initial conversion to XMLBeans